# grpc-gateway

./: BUILD  CHANGELOG.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  Makefile  README.md  go.mod  go.sum  repositories.bzl
.circleci/: README.md
docs/: index.md
docs/_docs/: customizingyourgateway.md  cygwin.md  faq.md  grpcapiconfiguration.md  patch.md  usage.md  usegotemplates.md
examples/internal/: README.md
examples/internal/browser/: bower.json  gulpfile.js
examples/internal/clients/abe/: BUILD.bazel  enum_helper.go
examples/internal/clients/abe/api/: swagger.yaml
examples/internal/clients/echo/: BUILD.bazel
examples/internal/clients/responsebody/: BUILD.bazel
examples/internal/clients/unannotatedecho/: BUILD.bazel
examples/internal/cmd/example-gateway-server/: BUILD.bazel  main.go
examples/internal/cmd/example-grpc-server/: BUILD.bazel  main.go
examples/internal/gateway/: BUILD.bazel  gateway.go  main.go
examples/internal/helloworld/: BUILD.bazel  helloworld.pb.go  helloworld.pb.gw.go
examples/internal/integration/: BUILD.bazel  client_test.go  fieldmask_test.go  integration_test.go  main_test.go  proto_error_test.go
examples/internal/proto/examplepb/: BUILD.bazel  a_bit_of_everything.pb.go  a_bit_of_everything.pb.gw.go  a_bit_of_everything.proto  a_bit_of_everything.swagger.json  echo_service.pb.go  echo_service.pb.gw.go  flow_combination.pb.go  flow_combination.pb.gw.go  non_standard_names.pb.go  non_standard_names.pb.gw.go  response_body_service.pb.go  response_body_service.pb.gw.go  stream.pb.go  stream.pb.gw.go  stream.swagger.json  unannotated_echo_service.pb.go  unannotated_echo_service.pb.gw.go  use_go_template.pb.go  use_go_template.pb.gw.go  wrappers.pb.go  wrappers.pb.gw.go
examples/internal/proto/pathenum/: BUILD.bazel  path_enum.pb.go  path_enum.proto
examples/internal/proto/sub/: BUILD.bazel  message.pb.go
examples/internal/proto/sub2/: BUILD.bazel  message.pb.go  message.proto
examples/internal/server/: BUILD.bazel  a_bit_of_everything.go  echo.go  fieldmask_helper.go  flow_combination.go  main.go  non_standard_names.go  responsebody.go  unannotatedecho.go
internal/: BUILD.bazel  errors.pb.go
internal/codegenerator/: BUILD.bazel  parse_req.go  parse_req_test.go
internal/httprule/: BUILD.bazel  compile.go  compile_test.go
protoc-gen-grpc-gateway/: BUILD.bazel  main.go
protoc-gen-grpc-gateway/descriptor/: BUILD.bazel  grpc_api_configuration.go  grpc_api_service.go  registry.go  registry_test.go  services.go  services_test.go  types.go  types_test.go
protoc-gen-grpc-gateway/generator/: BUILD.bazel  generator.go
protoc-gen-grpc-gateway/internal/gengateway/: BUILD.bazel  generator.go  generator_test.go  template.go  template_test.go
protoc-gen-swagger/: BUILD.bazel  main.go  main_test.go
protoc-gen-swagger/genswagger/: BUILD.bazel  generator.go  template.go  template_test.go  types.go
protoc-gen-swagger/options/: BUILD.bazel  annotations.pb.go  annotations.proto  openapiv2.pb.go  openapiv2.proto
runtime/: BUILD.bazel  context_test.go  convert.go  convert_test.go  errors.go  errors_test.go  fieldmask.go  handler.go  handler_test.go  marshal_httpbodyproto_test.go  marshal_json_test.go  marshal_jsonpb.go  marshal_jsonpb_test.go  marshal_proto.go  marshal_proto_test.go  marshaler_registry_test.go  mux.go  mux_test.go  pattern.go  pattern_test.go  proto2_convert.go  proto_errors.go  query.go  query_test.go
runtime/internal/examplepb/: BUILD.bazel  example.pb.go
utilities/: BUILD.bazel  trie_test.go
